修改数据保存格式，更改内容显示方式

--- a/com.jeden.tel/AndroidManifest.xml
+++ b/com.jeden.tel/AndroidManifest.xml
@@ -52,4 +52,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> 
     <!-- 开机 -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />  
+    <!-- 读取联系人 -->  
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>  
 </manifest>
